[project]
name = "dts_parser"
version = "0.1.0"
description = ""
authors = [
    {name = "mjc0042",email = "mjc0042@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pyqt6 (>=6.9.1,<7.0.0)"
]

packages = [
{ include = "dts_parser" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
